fixed unwanted horizontal scrolling for admissions page

--- a/css/section-switcher.css
+++ b/css/section-switcher.css
@@ -37,6 +37,7 @@ header {
     position: sticky;
     background: var(--pattern);
     top:0;
+    overflow-x: hidden;
 }
 #main-content hr {
     margin-bottom: 0;
